--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
         <div class="nosotros" id="nosotros">
             <p>           QUIENES SOMOS</p>
             <ul>
-                <li>Somos Valeria, Tao y Noé co-creadores de Plante Alimentos que, más que un emprendimiento, es una familia-equipo de trabajo que ama la naturaleza como fuente de vida y felicidad.</li>
+                <li>Somos Dani y Juan emprendedores y creadores de Salvá Foods que, más que un emprendimiento, es una familia-equipo de trabajo que ama la naturaleza como fuente de vida y felicidad.</li>
                 <li>Soñamos con una cultura más consciente, solidaria y saludable donde la alimentación juega un rol primordial ya que es un pilar central de nuestro estado personal, familiar, social y ambiental. Es algo que hacemos todos los días y que nos conecta con la naturaleza y lxs demás. Es vital para nuestra energía... es BÁSICO y para nosotros la revolución empieza por casa!</li>
-                <li>De este profundo deseo, hace cuatro años nació Plante Alimentos, emprendimiento en el que juntamos nuestros aprendizajes de vida y experiencias, junto a la de productores de distintos puntos del país que producen de forma consciente, sustentable y a partir de productos nobles.
+                <li>De este profundo deseo, hace cuatro años nació Salvá Foods, emprendimiento en el que juntamos nuestros aprendizajes de vida y experiencias, junto a la de productores de distintos puntos del país que producen de forma consciente, sustentable y a partir de productos nobles.
                     Creamos esta red para poder ofrecerte un conjunto de alimentos y productos de la naturaleza, elaborados artesanalmente a partir de materias primas de calidad, que te permitan ir construyendo hábitos saludables en la cocina de todos los días.</li>
             </ul>
         </div>
