--- a/index.html
+++ b/index.html
@@ -34,15 +34,18 @@
         </div>
 
     </div>
-     <ul class="redesSociales">
+    <ul class="redesSociales">
         <li>
-            <a href=" https://www.facebook.com/salvafoodstandil/ " target="_blank "><img class="boton_redes " src="css/images/facebook.png" alt="facebook "></a>
+            <a href=" https://www.facebook.com/salvafoodstandil/ " target="_blank "><img class="boton_redes "
+                    src="css/images/facebook.png" alt="facebook "></a>
         </li>
         <li>
-            <a href="https://www.instagram.com/salvafoodstandil/?hl=es-la" target="_blank"><img class="boton_redes" src="css/images/instagram.png" alt="instagram"></a>
+            <a href="https://www.instagram.com/salvafoodstandil/?hl=es-la" target="_blank"><img class="boton_redes"
+                    src="css/images/instagram.png" alt="instagram"></a>
         </li>
         <li>
-            <a href=" https://api.whatsapp.com/send?phone=5491124622673&text=&source=&data=&app_absent=" target=" _blank "><img class="boton_redes " src="css/images/whatsapp.png" alt="whatsapp "></a>
+            <a href=" https://api.whatsapp.com/send?phone=5491124622673&text=&source=&data=&app_absent="
+                target=" _blank "><img class="boton_redes " src="css/images/whatsapp.png" alt="whatsapp "></a>
         </li>
     </ul>
     <nav class="navbar navbar-dark bg-dark">
@@ -96,9 +99,9 @@
                 <div class="punto-nav"></div>
             </div>
         </div>
-       
 
-        <div class="entrega" >
+
+        <div class="entrega">
             <div class="entregas">
                 <img src="./css/images/envios_camion.svg" class="envios_camion" alt=""></button>
                 <p> ENVÍOS A DOMICILIO </p>
@@ -116,18 +119,30 @@
             </div>
         </div>
         <div class="nosotros" id="nosotros">
-            <p>           QUIENES SOMOS</p>
-            <ul>
-                <li>Somos Dani y Juan emprendedores y creadores de Salvá Foods que, más que un emprendimiento, es una familia-equipo de trabajo que ama la naturaleza como fuente de vida y felicidad.</li>
-                <li>Soñamos con una cultura más consciente, solidaria y saludable donde la alimentación juega un rol primordial ya que es un pilar central de nuestro estado personal, familiar, social y ambiental. Es algo que hacemos todos los días y que nos conecta con la naturaleza y lxs demás. Es vital para nuestra energía... es BÁSICO y para nosotros la revolución empieza por casa!</li>
-                <li>De este profundo deseo, hace cuatro años nació Salvá Foods, emprendimiento en el que juntamos nuestros aprendizajes de vida y experiencias, junto a la de productores de distintos puntos del país que producen de forma consciente, sustentable y a partir de productos nobles.
-                    Creamos esta red para poder ofrecerte un conjunto de alimentos y productos de la naturaleza, elaborados artesanalmente a partir de materias primas de calidad, que te permitan ir construyendo hábitos saludables en la cocina de todos los días.</li>
-            </ul>
+            <p> QUIENES SOMOS</p>
+
+            <p>Somos Dani y Juan emprendedores y creadores de Salvá Foods que, más que un emprendimiento, es una
+                familia-equipo de trabajo que ama la naturaleza como fuente de vida y felicidad.
+            </p>
+            <P>
+                MISIÓN
+            </P>
+            <P>
+                Brindar una opción alternativa rica, saludable para los productos lácteos.
+            </P>
+            <P>
+                VISIÓN
+            </P>
+            <P>
+                Favorecer al cambio alimenticio que queremos ver a nivel mundial.
+                Facilitando y desestigmatizando el veganismo como forma de vida
+            </P>
+
         </div>
 
     </div>
 
-<footer>Copyright Salvá Foods - 2020 - Todos los derechos reservados</footer>
+    <footer>Copyright Salvá Foods - 2020 - Todos los derechos reservados</footer>
 
 </body>
 
