--- a/index.html
+++ b/index.html
@@ -108,18 +108,18 @@
             </div>
         </div>
         <div class="nosotros" id="nosotros">
-            <p> QUIENES SOMOS</p>
+            <p class="verde"> QUIENES SOMOS</p>
 
             <p>Somos Dani y Juan emprendedores y creadores de Salvá Foods que, más que un emprendimiento, es una
                 familia-equipo de trabajo que ama la naturaleza como fuente de vida y felicidad.
             </p>
-            <P>
+            <P class="verde">
                 MISIÓN
             </P>
             <P>
                 Brindar una opción alternativa rica, saludable para los productos lácteos.
             </P>
-            <P>
+            <P class="verde">
                 VISIÓN
             </P>
             <P>
@@ -129,7 +129,7 @@
 
         </div>
         <div class="recetas_titulo">
-            <p> Nuestras Recetas</p>
+            <p class="verde"> Nuestras Recetas</p>
         </div>
         <div class="recetas_foto">
             <div>
@@ -143,9 +143,20 @@
                 <p> Barritas </p>
             </div>
         </div>
-    </div>
-    </div>
 
+        <div class="recetas_titulo">
+            <p class="verde">CONTACTO</p>
+        </div>
+        <form action="">
+            <label for="">Nombre</label>
+            <input type="text">
+            <label for="">Correo Electronico</label>
+            <input type="text">
+            <label for="">Mensaje</label>
+            <input type="text">
+            
+        </form>
+    </div>
     <footer>
         <div class="div_copyright">Copyright Salvá Foods - 2020 - Todos los derechos reservados</div>
         <div class="div_redes">
@@ -160,6 +171,7 @@
                 target=" _blank "><img class="boton_redes " src="css/images/whatsapp.png" alt="whatsapp "></a>
 
         </div>
+
     </footer>
 
 </body>
