--- a/index.html
+++ b/index.html
@@ -144,18 +144,19 @@
             </div>
         </div>
 
-        <div class="recetas_titulo">
+        <div class="contacto" >
             <p class="verde">CONTACTO</p>
-        </div>
-        <form action="">
-            <label for="">Nombre</label>
-            <input type="text">
-            <label for="">Correo Electronico</label>
-            <input type="text">
-            <label for="">Mensaje</label>
-            <input type="text">
-            
-        </form>
+        
+            <form action="">
+                <label for="">Nombre</label>
+                <input type="text">
+                <label for="">Correo Electronico</label>
+                <input type="text">
+                <label for="">Mensaje</label>
+                <textarea  rows="5" cols="110" placeholder="escribe aqui tus comentarios"> </textarea>
+                <button type="button">Agregar</button>
+            </form>
+       </div>
     </div>
     <footer>
         <div class="div_copyright">Copyright Salvá Foods - 2020 - Todos los derechos reservados</div>
